# open-lifeworlds-data-product-berlin-lor-population

./: .gitignore  README.md  data-product-manifest.yml  data-product.yml  data-transformation.yml  main.py  pyproject.toml  requirements.txt
data/berlin-lor-population-2015-01/: berlin-lor-population-2015-01-district-regions.geojson  berlin-lor-population-2015-01-districts.geojson  berlin-lor-population-2015-01-forecast-areas.geojson  berlin-lor-population-2015-01.csv  berlin-lor-population-2015-01_T1.csv  berlin-lor-population-2015-01_T2.csv  berlin-lor-population-2015-01_T3.csv  berlin-lor-population-2015-01_T4.csv
data/berlin-lor-population-2015-02/: berlin-lor-population-2015-02-district-regions.geojson  berlin-lor-population-2015-02-districts.geojson  berlin-lor-population-2015-02-forecast-areas.geojson  berlin-lor-population-2015-02.csv  berlin-lor-population-2015-02_T1.csv  berlin-lor-population-2015-02_T2.csv  berlin-lor-population-2015-02_T3.csv  berlin-lor-population-2015-02_T4.csv
data/berlin-lor-population-2016-01/: berlin-lor-population-2016-01-district-regions.geojson  berlin-lor-population-2016-01-districts.geojson  berlin-lor-population-2016-01-forecast-areas.geojson  berlin-lor-population-2016-01.csv  berlin-lor-population-2016-01_T1.csv  berlin-lor-population-2016-01_T2.csv  berlin-lor-population-2016-01_T3.csv  berlin-lor-population-2016-01_T4.csv
data/berlin-lor-population-2016-02/: berlin-lor-population-2016-02-district-regions.geojson  berlin-lor-population-2016-02-districts.geojson  (+6 more)
docs/: data-product-canvas.md
lib/load/: data_loader.py
(+583 files in other folders)
