[project]
name = "open-lifeworlds-data-product-berlin-lor-population"
version = "0.1.0"
description = "Data product combining Berlin LOR population data and geodata"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dacite==1.9.2",
    "pandas==2.2.3",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "ruff>=0.8.0",
    "open-lifeworlds-python-lib",
    "click>=8.2.1",
]

[tool.uv.sources]
open-lifeworlds-python-lib = { git = "https://github.com/open-lifeworlds/open-lifeworlds-python-lib.git" }

